--- a/style.css
+++ b/style.css
@@ -1,16 +1,3 @@
-/* temporary */
-ul.social-icons > li.facebook,
-ul.social-icons > li.instagram,
-ul.social-icons > li.snapchat,
-ul.social-icons > li.twitter,
-ul.social-icons > li.venmo {
-  display: none;
-}
-
-ul.social-icons li {
-  margin-left: 1em;
-}
-
 /* general rules */
 * {
   font-family:'Lato','Ubuntu',sans-serif;
@@ -18,184 +5,42 @@ ul.social-icons li {
   font-size: 22px; 
   line-height: 1.6em;
 }
+
 body {
   margin: 0;
   height: 100vh; 
   width: 100vw;
   position: fixed;
   -webkit-font-smoothing: antialiased;
+
+  display: flex;
+  justify-content: space-around;
 }
+
 a {
   text-decoration: none;
   color: black;
 }
+
 a:hover{
   text-decoration: underline;
 }
 
-/* background images */
-.bg_wrapper {
-  overflow: hidden;
-}
-#bg, #tiny_bg {
-  position: absolute;
-  height: 100vh; 
-  width: 100vw;
-  overflow: hidden;
-
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-#bg {
-  background-image: url('/assets/bg.jpg');
-  z-index: -5;
-       -o-transition: all 0.5s;
-     -moz-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-          transition: all 0.5s;
-}
-#tiny_bg.bumped, #bg.bumped {
-  bottom: 5em;
-}
-#tiny_bg {
-  background-image: url('/assets/tiny_bg.jpg');
-  filter: blur(3vw);
-
-  transform: scale(1.15);
-  overflow: hidden;
-  z-index: -1;
-  opacity: 1;
-
-  will-change: transform, opacity;
-}
-#tiny_bg.faded {
-  transform: scale(1);
-  animation: loaded .5s cubic-bezier(.48,.29,.76,.68);
-  opacity: 0;
-}
-#tiny_bg.behind {
-  z-index: -20;
-  opacity: 0.6;
-  transform: scale(1);
-  bottom: 1em;
-}
-
 /* main text */
 .main {
-  width: 33%;
-  max-width: 50em;
-  min-width: 262px;
-  margin: 8% 0 0 11%;
-  float: left;
-  animation: fadein 1s cubic-bezier(.12,.98,.38,1);
-  position: relative;
+  display: inline-flex; 
 }
 
-.main > div.name {
-  margin-left: .1em;
+.name-and-icons-container {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.name-and-icons-container > div.name {
+  display: flex;
   font-size: 36px;
-}
-
-/* apps */
-#apps {
-  width: 80%;
-  z-index: -10;
-  position: fixed;
-  bottom: 0;
-  height: 5em;
-  display: block;
-  margin: 0 10%;
-}
-div.app {
-  width: 5em;
-  display: inline-block;
-  text-align: center;
-  cursor: pointer;
-}
-#apps img {
-  height: 3em;
-  border-radius: .5em;
-  margin-top: .35em;
-}
-div.app > a > p {
-  margin: 0;
-  margin-top: -0.3em;
-  font-size: 0.8em;
-}
-
-/* contact card modal */
-.vcard {
-  width: 225px;
-  padding: .6em;
-  margin: 8% 5% 0 6%;
-  border: .1em solid #999;
-  border-radius: .35em;
-  background-color: rgba(255,255,255,.6);
-  float: left;
-  position: relative;
-  visibility: hidden;
-}
-.vcard * {
-  font-size: 20px;
-  line-height: 1em;
-}
-
-.vcard.close {
-  transform: translateX(5em);
-  animation: fadeoutright 1s cubic-bezier(.12,.98,.38,1);
-}
-.vcard.open {
-  transform: translateX(0);
-  animation: fadeinright 1s cubic-bezier(.12,.98,.38,1);
-  visibility: visible;
-}
-
-.vcard .icons {
-  float: left;
-  width: 50px;
-  margin-bottom: -.5em;
-  text-align: center;
-}
-.vcard .text {
-  float: left;
-}
-
-.vcard .photo {
-  height: 47px;
-  width: 47px;
-  margin: auto;
-}
-.vcard .photo img {
-  max-width: 100%;
-  border-radius: .35em;
-}
-.vcard .text .name,
-.vcard .text .email {
-  margin: 0 0 .6em .6em;
-}
-.vcard .phone {
-  font-size: 18px;
-}
-
-.vcard .dl-btn {
-  margin-top: 0.5em;
-  display: inline-block;
-  transition: transform .1s ease-in-out;
-}
-.vcard .dl-btn svg {
-  padding-top: .4em;
-}
-.vcard .dl-btn svg path {
-  transform: scale(.5,.5);
-  transition: color .1s ease-in-out;
-}
-.vcard .dl-btn:hover {
-  transform: scale(1.05,1.05);
-}
-.vcard .dl-btn:hover svg path {
-  fill: #444;
-  stroke: #444;
 }
 
 /* social icon links */
@@ -203,14 +48,16 @@ ul.social-icons {
   padding:0;
   list-style: none;
   margin:0;
-  float: left;
+  display: flex;
+  justify-content: space-between;
 }
+
 ul.social-icons li {
   vertical-align: top;
   display: inline;
-  height: 100px;
   padding: 4px;
 }
+
 a.social-icon > i {
   font-size: 24px;
   color: #666;
@@ -223,11 +70,7 @@ a.social-icon > i {
   -webkit-transition:.5s;
   transition: .5s;
 }
-/* new hover bar makes this obsolete
- * increases padding on whichever icon is being hovered over
-.social-icons a > i.fa:hover {
-  padding: 4px 8px;
-} */
+
 #hoverbar {
   opacity: 0;
   width: 27px;
@@ -237,154 +80,16 @@ a.social-icon > i {
   bottom: 0;
   transition: left;
   -o-transition:.3s;
-  -ms-transition:.3s;
+ -ms-transition:.3s;
   -moz-transition:.3s;
   -webkit-transition:.3s;
   transition: .3s;
 }
 
-a.social-icon > i.fa-address-card {
-  font-size: 20px;
-}
+div.headshot {
+  height: 10vh;
+  width: 10vw;
 
-/* brand-specific coloring for icon links */
-.fa-facebook:hover {
-  color: #4676dc;
-  border-color: #4676dc;
-}
-.fa-instagram:hover {
-  color: #eb8231;
-  border-color: #eb8231;
-}
-.fa-twitter:hover {
-  color: #52a0fd;
-  border-color: #52a0fd;
-}
-.fa-snapchat-ghost:hover {
-  color: #FFEC00;
-  border-color: #FFEC00;
-}
-ul.social-icons li.venmo {
-  padding-left: 3px;
-}
-.fa-vimeo:hover {
-  color: #3D95CE;
-  border-color: #3D95CE;
-}
-ul.social-icons li.linkedin {
-  padding-left: 6px;
-}
-.fa-linkedin:hover {
-  color: #0073a4;
-  border-color: #0073a4;
-}
-ul.social-icons li.gitlab {
-  padding-left: 3px;
-}
-.fa-gitlab:hover{
-  color: #000;
-  border-color: #000;
-}
-.fa-address-card:hover,
-.fa-address-card.open {
-  color: #9e3416;
-  border-color: #9e3416;
-}
-
-/* when the screen is more horizontal than vertical,
-   change to a centered background */
-@media (max-aspect-ratio: 13/12) {
-  #bg, #tiny_bg {
-    background-position: 100% 100%;
-    background-size: contain;
-  }
-  #bg {
-    background-image: url('/assets/centered_bg.jpg');
-  }
-  #tiny_bg {
-    background-image: url('/assets/tiny_centered_bg.jpg');
-  }
-  #tiny_bg.faded {
-    transform: scale(1);
-  }
-}
-@media only screen and (max-width: 380px) {
-  /* use this to guess if it's mobile */
-  #bg {
-    bottom: 5em;
-  }
-  #bg.bumped {
-    bottom: 10.25em;
-  }
-  #tiny_bg {
-    bottom: 7em;
-  }
-  #tiny_bg.behind {
-    bottom: 6em;
-  }
-  #proj-arrow {
-    bottom: 0;
-  }
-  #proj-arrow.bumped {
-    bottom: 5.25em;
-  }
-}
-/* handle positioning of contact card */
-@media (max-width: 693px) {
-  .main {
-    width: 78%;
-  }
-  .vcard {
-    float: right;
-    margin-top: 1em;
-  }
-}
-
-/* idea for fade in taken from https://malone.io */
-/* used for .main on load */
-@keyframes fadein {
-  from {
-    opacity: 0;
-    transform: translateX(-5em);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-/* used for vcard */
-@keyframes fadeinright {
-  from {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateX(5em);
-  }
-  to {
-    opacity: 1;
-    visibility: visible;
-    transform: translateX(0);
-  }
-}
-@keyframes fadeoutright {
-  from {
-    opacity: 1;
-    visibility: visible;
-    transform: translateX(0em);
-  }
-  to {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateX(5em);
-  }
-}
-/* used for progressive background image loading */
-@keyframes loaded {
-  from {
-    opacity: 1;
-    transform: scale(1.15);
-  }
-  to {
-    opacity: 0;
-    transform: scale(1);
-  }
+  background-image: url('/assets/headshot.jpg');
+  background-size: cover;
 }
